# lvr.wtf

./: .gitignore  Dockerfile  README.md  TODO.md  package-lock.json  package.json  tailwind.config.js
backend/: Cargo.toml
backend/data/checkpoints/: 0x0d4a11d5EEaaC28EC3F61d100daF4d40471f1852_-0.5.parquet  0x0d4a11d5EEaaC28EC3F61d100daF4d40471f1852_-1.0.parquet  0x0d4a11d5EEaaC28EC3F61d100daF4d40471f1852_-1.5.parquet  0x0d4a11d5EEaaC28EC3F61d100daF4d40471f1852_-2.0.parquet  0x0d4a11d5EEaaC28EC3F61d100daF4d40471f1852_0.0.parquet  0x0d4a11d5EEaaC28EC3F61d100daF4d40471f1852_0.5.parquet  0x0d4a11d5EEaaC28EC3F61d100daF4d40471f1852_1.0.parquet  0x0d4a11d5EEaaC28EC3F61d100daF4d40471f1852_1.5.parquet  0x0d4a11d5EEaaC28EC3F61d100daF4d40471f1852_2.0.parquet  0x11950d141EcB863F01007AdD7D1A342041227b58_-0.5.parquet  0x11950d141EcB863F01007AdD7D1A342041227b58_-1.0.parquet  0x11950d141EcB863F01007AdD7D1A342041227b58_-1.5.parquet  0x11950d141EcB863F01007AdD7D1A342041227b58_-2.0.parquet  0x11950d141EcB863F01007AdD7D1A342041227b58_0.0.parquet  0x11950d141EcB863F01007AdD7D1A342041227b58_0.5.parquet  0x11950d141EcB863F01007AdD7D1A342041227b58_1.0.parquet  0x11950d141EcB863F01007AdD7D1A342041227b58_1.5.parquet  0x11950d141EcB863F01007AdD7D1A342041227b58_2.0.parquet  0x11950d141ecb863f01007add7d1a342041227b58_brontes.parquet  0x11b815efB8f581194ae79006d24E0d814B7697F6_-0.5.parquet  0x11b815efB8f581194ae79006d24E0d814B7697F6_-1.0.parquet  0x11b815efB8f581194ae79006d24E0d814B7697F6_-1.5.parquet  (+187 more)
backend/src/: constants.rs  error.rs  lib.rs  main.rs  models.rs  utils.rs
public/: index.html
(+565 files in other folders)
